# SaaSy

./: Cargo.toml  README.md  example_snowball.xlsx  package-lock.json  package.json  pyproject.toml  snowball.xlsx
rust/src/: lib.rs
saasy/: models.py
src/: dateutils.ts  lib.rs
src/models/: arr_event.ts  arr_snowball.ts  arr_timeline.ts  contract_event.ts  customer.ts  customer_map.ts
src/writer/: test_writer.js
tests/: dateutils.test.ts  test_arr_event_stream.py  test_arr_interval_timeline.py
tests/models/: arr_event.test.ts
ts/: package-lock.json  package.json
ts/src/: dateutils.ts
ts/src/models/: arr_event.ts  contract.ts
ts/tests/: dateutils.test.ts
ts/tests/models/: arr_event.test.ts  arr_timeline.test.ts  contract_test_cases.ts
